Use List.of for small fixed lists where the language level allows (#3696)
292 calls across 82 files, replacing Arrays.asList and
Collections.singletonList with List.of where the call has ten or fewer
arguments. Ten is the boundary because List.of has fixed-arity overloads
up to that point and falls back to varargs beyond it, allocating an
array on the way.

Scope is limited by language level rather than by taste. List.of is
Java 9, so the release-8 main sources are untouched: oshi-common (19
calls), oshi-core (8) and oshi-demo (5) keep what they have. That leaves
the test sources, which compile at 17 since #3688, plus oshi-core-ffm
and oshi-metrics main.

Six calls are deliberately left alone. Four hold more than ten elements.
The other two are Collections.singletonList(null) in
HardwareAbstractionLayerTest, which List.of rejects outright: it refuses
null elements where singletonList accepts them, and that test exists to
feed a null through the layer.

The hazards were measured before converting rather than assumed. Across
the candidate sites there are no structural mutations - no add, remove,
set, sort or clear on any of these lists - and no contains(null) or
indexOf(null), which List.of answers with an exception where
Arrays.asList answers false. Fourteen sites are already wrapped in a
copying constructor and are unaffected either way.

Unlike the fixture conversions that preceded this, the failure mode here
is loud: an immutable list that something tries to mutate throws
UnsupportedOperationException, and a null element throws at
construction. The suite is a real check on this change rather than a
weak one.