@@ -8,8 +8,8 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.closeTo;
 import static org.hamcrest.Matchers.is;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -19,14 +19,13 @@ class SolarisSensorsTest {
     void testParseCpuTemperature() {
         assertThat(
                 SolarisSensors.parseCpuTemperature(
-                        Arrays.asList("  :Temperature  42", "    Temperature:  36", "    Temperature:  42")),
+                        List.of("  :Temperature  42", "    Temperature:  36", "    Temperature:  42")),
                 is(closeTo(42.0, 0.001)));
     }
 
     @Test
     void testParseCpuTemperatureMillidegrees() {
-        assertThat(
-                SolarisSensors.parseCpuTemperature(Arrays.asList("    Temperature:  45000", "    Temperature:  42000")),
+        assertThat(SolarisSensors.parseCpuTemperature(List.of("    Temperature:  45000", "    Temperature:  42000")),
                 is(closeTo(45.0, 0.001)));
     }
 
@@ -38,7 +37,7 @@ class SolarisSensorsTest {
     @Test
     void testParseFanSpeeds() {
         int[] speeds = SolarisSensors
-                .parseFanSpeeds(Arrays.asList("    Speed:  1200", "    Speed:  1500", "    Speed:  900"));
+                .parseFanSpeeds(List.of("    Speed:  1200", "    Speed:  1500", "    Speed:  900"));
         assertThat(speeds.length, is(3));
         assertThat(speeds[0], is(1200));
         assertThat(speeds[1], is(1500));
@@ -53,7 +52,7 @@ class SolarisSensorsTest {
 
     @Test
     void testParseVoltage() {
-        assertThat(SolarisSensors.parseVoltage(Arrays.asList("    Voltage:  1.200", "    Voltage:  3.300")),
+        assertThat(SolarisSensors.parseVoltage(List.of("    Voltage:  1.200", "    Voltage:  3.300")),
                 is(closeTo(1.2, 0.001)));
     }
 
@@ -64,7 +63,7 @@ class SolarisSensorsTest {
 
     @Test
     void testParseVoltageNoMatch() {
-        assertThat(SolarisSensors.parseVoltage(Arrays.asList("  Other:  1.200", "  Something:  3.300")),
+        assertThat(SolarisSensors.parseVoltage(List.of("  Other:  1.200", "  Something:  3.300")),
                 is(closeTo(0.0, 0.001)));
     }
 }
